; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_MovieToggleReadOnly.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_MovieToggleReadOnly.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@Movie = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@Playback = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"Movie is now read+write.\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"Movie is now read only.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MovieToggleReadOnly() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Movie, i32 0, i32 0), align 8
  %2 = load i64, i64* @Playback, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Movie, i32 0, i32 1), align 8
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %9

7:                                                ; preds = %4
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Movie, i32 0, i32 1), align 8
  %8 = call i32 @DisplayMessage(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %11

9:                                                ; preds = %4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Movie, i32 0, i32 1), align 8
  %10 = call i32 @DisplayMessage(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %7
  br label %12

12:                                               ; preds = %11, %0
  ret void
}

declare dso_local i32 @DisplayMessage(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
